  environment variable. See README.rst for details.
- Emulate isatty(). It would previously return true for emulated devices as
  PTYs are being used internally, but the actual emulated device is not always
  supposed to be a TTY. Fixes regression with X.org synaptics >= 1.8 device
  emulation as that uses xf86OpenSerial() to open evdev devices (which is
  wrong, but reality).

0.8.2 (2014-05-15)
------------------
- Fix ioctl recording of multiple device open/close cycles. This regressed in
  0.6 to only keep the data of the last cycle.
- Update devices/cameras/canon-powershot-sx200.ioctl with ioctls from
  libgphoto2 2.5.4, to make the /umockdev-run/integration/gphoto-* tests work
  with that version.
- On ioctl recording, also record the device name on close().

0.8.1 (2014-03-31)
------------------
- Fix eternal hang due to negative delays when playing back evemu scripts with
  timestamps that go backwards.

0.8 (2014-03-20)
----------------
New features:
- Add new method umockdev_testbed_load_evemu_events() to replay an evemu events
  file into an emulated evdev device. These are platform independent and thus
  more portable than a script record.
- Add -e/--evemu-events=devname=eventsfilename option to umockdev-run, to load
  an evemu .events file. (Issue #5)
- Add -e/--evemu-events=devname=eventsfilename option to umockdev-record, to
  record reads from an evdev device into an evemu .events file. (Issue #5)
- Add umockdev_in_mock_environment(). This function returns whether
  or not the current process is running in a umockdev testbed
  environment. Thanks Chris Halse Rogers!

Bug fixes:
- Only send a "add" uevent from add_device if running in a umockdev
  testbed environment. Fixes error messages when loading devices from
  the umockdev-run commandline. Thanks Chris Halse Rogers!
- Fix detection of mismatching devices when recording into an already existing
  ioctl or script record file.

0.7 (2014-03-05)
----------------